Renamed Project Added Stubs for presentation

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@
  * in the user manual at https://docs.gradle.org/6.6.1/userguide/multi_project_builds.html
  */
 
-include 'SimpleWordCount'
+include 'BasicExamples'
 rootProject.name = 'Spark-Examples'
