--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -6,6 +6,7 @@ ext {
 libraries.scala = [group:'org.scala-lang', name:'scala-library', version: '2.12.11']
 libraries.spark_core = [group: 'org.apache.spark', name: 'spark-core_2.12', version: '3.1.1']
 libraries.spark_sql = [group: 'org.apache.spark', name: 'spark-sql_2.12', version: '3.1.1']
+libraries.spark_streaming = [group: 'org.apache.spark', name: 'spark-streaming_2.12', version: '3.1.1']
 
 
 libraries.jupiter = [group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1']
