--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -3,11 +3,14 @@ ext {
 }
 
 
-libraries.scala = [group:'org.scala-lang', name:'scala-library', version: '2.12.11']
-libraries.spark_core = [group: 'org.apache.spark', name: 'spark-core_2.12', version: '3.1.1']
-libraries.spark_sql = [group: 'org.apache.spark', name: 'spark-sql_2.12', version: '3.1.1']
-libraries.spark_streaming = [group: 'org.apache.spark', name: 'spark-streaming_2.12', version: '3.1.1']
+libraries.scala = [group:'org.scala-lang', name:'scala-library', version: '2.13.8']
+libraries.spark_core = [group: 'org.apache.spark', name: 'spark-core_2.13', version: '3.2.1']
+libraries.spark_sql = [group: 'org.apache.spark', name: 'spark-sql_2.13', version: '3.2.1']
+libraries.spark_streaming = [group: 'org.apache.spark', name: 'spark-streaming_2.13', version: '3.2.1']
 
 
-libraries.jupiter = [group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.7.1']
-libraries.jupiter_engine = [group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.7.1']
+libraries.jupiter = [group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.0-M1']
+libraries.jupiter_engine = [group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.0-M1']
+
+
+libraries.assertj = [group: 'org.assertj', name: 'assertj-core', version: '3.22.0']
